src/app/components/pages/common-institutional-fund/common-institutional-fund.component.css
.p-text {
  padding: 20px;
  text-align: justify;
}
.text-decoration {
  padding: 20px;
  margin: 35px 1px 0px 182px;
  text-align: justify;
  line-height: 1.9 !important;
}
.text-decoration p {
  padding: 20px;
  margin: 35px 1px 0px 182px;
  text-align: justify;
  line-height: 1.9 !important;
}
.blanced-fund-btn-list {
  margin: -107px 30px 0 0;
  padding: 0;
  float: right;
}
.blanced-fund-btn-list li {
  display: block;
  margin: 4px 0;
}
.blanced-fund-btn-list li a.red {
  background: url("../../../../assets/images/red-arrow-icon.jpg") no-repeat
    right;
}

a.btn-invest-now-red span {
  padding: 10px 20px 10px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #e9c2c9;
  font-size: 12px;
  color: #656565;
  font-weight: 500;
  height: 40px;
  line-height: 13px;
}
a.btn-invest-now-red span:hover {
  background: #d98b9c;
  color: #333;
  line-height: 13px;
}
a.btn-invest-now-red {
  display: block;
  background: #b30b2e url('src/assets/images/red-arrow-icon.jpg') no-repeat;
  background-position: 103% 50%;
  padding-right: 45px;
  width: 185px;
  line-height: 13px;
  cursor: pointer;
}
a.btn-invest-now-green span {
  padding: 10px 20px 10px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #c5dad7;
  font-size: 12px;
  color: #656565;
  font-weight: 500;
  height: 40px;
  line-height: 13px;
}
a.btn-invest-now-green span:hover {
  background: #c5d9e2;
  color: #333;
  line-height: 13px;
}
a.btn-invest-now-green {
  display: block;
  background: #8abbb6 url('src/assets/images/arrow-icon.jpg') no-repeat;
  background-position: 103% 50%;
  padding-right: 45px;
  width: 185px;
  line-height: 13px;
  cursor: pointer;
}
.fund-manage-heading {
  min-height: 115px;
  line-height: 66px !important;
}

.institutional-header-holder {
  display: grid;
  grid-template-columns: 4fr 1fr;
  margin-bottom: 4px;
  justify-items: center;
  align-items: center;
  padding: 15px 0;
}

.balanced-fund-heading-wrap {
  display: flex;
  align-items: center;
  justify-self: start;
  margin-left: 30px;
}

.institutional-header-holder > .balanced-fund-heading-wrap > .fund-manage-heading {
  margin: 0;
  padding: 0;
  min-height: auto;
  margin-left: 15px;
}

.institutional-header-holder > ul.blanced-fund-btn-list {
  grid-column: 2 / 3;
  float: unset;
  margin: 0;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 7.5px;
  margin-right: 15px;
}

.quarterly-commentary {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}

/* --------------- Mobile CSS ---*/
@media screen and (max-width: 480px) {
  .p-text {
    text-align: left;
  }

  .button-section > .row > .suscribe > .btn-meet-leaders {
    margin-right: 0!important;
    margin-bottom: 10px;
  }
  
  .button-section > .row > .suscribe > .btn-meet-leaders > span, 
  .button-section > .row > .suscribe > .btn-meet-fund-manager > span{
    width: 100%;
    display: flex;
    align-items: center;
  }


}

@media screen and (max-width: 991px) {
  .unconventional-thinking {
    float: none;
  }
  
  .unconventional-thinking > .text-center {
    display: flex;
  }

  .unconventional-thinking > .text-center > .fund-manage-heading {
    padding: 10px;
    min-height: unset;
    line-height: unset!important;
  }

  .unconventional-thinking > .text-center > .blanced-fund-btn-list {
    margin: 0;
    padding: 0 15px 0 0;
    float: none;
    display: flex;
    flex-flow: column;
    justify-content: center;
    margin-bottom: 0;
  }

}


@media screen and (min-width: 481px) and (max-width: 991px) {
  .unconventional-thinking > .text-center {
    justify-content: space-between;
    align-items: center;
    padding: 0 15px;
  }
}

